# filter-mui

./: LICENSE  README.md  requirements.txt  setup.cfg  testbook.ipynb
.github/workflows/: pylint.yml  python-package.yml
filtermui/: __init__.py  muifilter.py  types.py  utils.py
src/filtermui/: FilterContainer.py  __init__.py  channels_database.py  django_filter_operators.py  filter_types.py  filtermui.py
tests/: QuerySetFaker.py  __init__.py  data.py  muifilter_test.py  test_data.py  test_filtermui.py
