[metadata]
name = filtermui
version = 1.0.1
author = William Lazarre
author_email = maxlazarr@gmail.com
description = Converts MUI filters into a Django query.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxlaza411/filter-mui
project_urls =
    Bug Tracker = https://github.com/maxlaza411/filter-mui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src